# ourproject

./: LICENSE  README.md
（1）设计文件/: 稳压板STM32.SchDoc
（2）项目代码/: CMakeLists.txt  build-linux_RK3588.sh
（2）项目代码/src/: main.cpp
（2）项目代码/src/bytetrack/: BYTETracker.cpp  BYTETracker.h  BytekalmanFilter.h  datatype_bytetrack.h  detector.h
（2）项目代码/src/can/: can.cpp  can.h
（2）项目代码/src/engine/: rknn_engine.cpp  rknn_engine.h
（2）项目代码/src/process/: preprocess.cpp  yolov5_postprocess.cpp  yolov5_postprocess.h  yolov8_postprocess.cpp  yolov8_postprocess.h
（2）项目代码/src/streamer/: streamer.cpp  streamer.h
（2）项目代码/src/task/: Thead_control.cpp  Thread_control.h  yolov7.cpp  yolov7.h  yolov8.cpp  yolov8.h
（2）项目代码/src/types/: yolo_datatype.h
（2）项目代码/src/uart/: uart.cpp  uart.h
（2）项目代码/src/utils/: engine_helper.h
